Trasnformar o id para string